# tk_cadence

./: CLAUDE.md  README.md  command_context.py  command_history.py  command_window.py  document.py  graphics_api.py  interpreter.py  main.py  pyproject.toml  schematic_window.py  text_editing.py  transcript.py
tests/: test_command_history.py  test_document.py  test_graphics_api.py  test_interpreter.py  test_schematic_manager.py  test_text_editing.py  test_transcript.py
